[package]
name = "rvemu-bindings"
version = "0.1.0"
authors = ["Dan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rvemu = { package="rvemu", path = "../rvemu/" }
deno_core = "0.187.0"
serde_json = "1.0.96"
serde_v8 = "0.98.0"


[lib]
name = "rvemu"
crate-type = ["cdylib"]