[package]
name = "rvemu"
description = "RISC-V emulator core implementation."
version = "0.0.11"
authors = ["Asami Doi"]
edition = "2018"
repository = "https://github.com/d0iasm/rvemu"
license = "MIT"
keywords = ["riscv", "risc-v", "emulator"]
categories = ["emulators", "simulation"]
readme = "USAGE.md"
include = [
  "Cargo.toml",
  "Cargo.lock",
  "src/**/*",
  "LICENSE",
  "Makefile",
  "README.md",
  "USAGE.md",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
debug = true
opt-level = 3
